tests/sema/fail/v3_fail_break_outside_loop.ep
# COMPILE_FAIL_CONTAINS: break outside loop

fun main(): void {
    break
}
